# TCC---2025

./: .gitignore  Makefile  README.md  ambient.txt  election_simulation_openfhe.py  package-lock.json  q-dev-chat-2025-11-13-criptografia.md  requirements.txt  requirements2.txt  run_stress_tests.py  simple-integers-escalar.py  test_crypto.py
fast_backend/: database.db  env.c  pyproject.toml  test.db
fast_backend/migrations/: env.py
fast_backend/migrations/versions/: 038284490af9_outras_alterações.py  23b9da4b6685_initial_migration.py  51ff67aac2d9_14_11_2025_16_13.py  6bb17667af7c_21_10_2025_models.py  83ea42cb9a8a_exercicio_02_aula_04.py  906ae8318e7a_11_11_2025_20_29.py  d3ba91457e41_create_users_table.py
fast_backend/src/: app.py  crypto_service.py  database.py  models.py  schemas.py  security.py  settings.py
fast_backend/src/routers/: auth.py  candidate.py  candidates.py  election.py  elections.py  events.py  users.py  vote.py
fast_backend/tests/: conftest.py  test_app.py  test_auth.py  test_candidates.py  test_db.py  test_elections.py  test_security.py  test_stress_voting.py  test_users.py
manual_tests/: bfv_add_test.py  crypto_test.py  run_stress_test.py  run_stress_test_random.py  stress_test_report_run_10_20251125_161607.json  stress_test_report_run_1_20251125_153457.json  stress_test_report_run_1_20251125_164441.json  stress_test_report_run_2_20251125_164915.json  stress_test_report_run_3_20251125_165355.json  stress_test_report_run_3_20251125_171532.json  stress_test_report_run_6_20251125_155846.json  stress_test_report_run_7_20251125_160319.json  test_encrypted_vote_size.py  (+2 more)
(+86 files in other folders)
